<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/textView1"
        style="@style/Text.Label.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing2x"
        android:layout_marginTop="@dimen/spacing2x"
        android:text="@string/transactionsPage__detailedGraph__current_balance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/currentBalanceText"
        style="@style/Text.Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/orange"
        app:layout_constraintStart_toStartOf="@id/textView1"
        app:layout_constraintTop_toBottomOf="@id/textView1"
        tools:text="4,455.40"
        />

    <TextView
        android:id="@+id/textView2"
        style="@style/Text.Label.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing2x"
        android:text="@string/transactionsPage__detailedGraph__available"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textView1"
        />

    <TextView
        android:id="@+id/availableBalanceText"
        style="@style/Text.Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/status_blue"
        app:layout_constraintEnd_toEndOf="@id/textView2"
        app:layout_constraintTop_toTopOf="@id/currentBalanceText"
        tools:text="5,455.60"
        />

    <ImageView
        android:id="@+id/graphImage"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="@dimen/spacing2x"
        android:layout_marginTop="@dimen/spacing1x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentBalanceText"
        />

    <!-- TODO: Use a general item view here -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pendingContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing2x"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/graphImage"
        >

        <View
            android:id="@+id/pendingDecor"
            android:layout_width="@dimen/spacing1x"
            android:layout_height="0dp"
            android:background="@color/orange_20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/pendingLabelText"
            style="@style/Text.Label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing1x"
            android:layout_marginEnd="@dimen/spacing1x"
            android:text="@string/transactionsPage__detailedGraph__reservations_pending"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/pendingCurrencyText"
            app:layout_constraintStart_toEndOf="@id/pendingDecor"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/pendingText"
            style="@style/Text.Label.Strong"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing2x"
            android:gravity="end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintTop_toTopOf="@id/pendingLabelText"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent="0.25"
            tools:text="44,544.40"
            />

        <TextView
            android:id="@+id/pendingCurrencyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing2x"
            android:textColor="@color/grey"
            app:layout_constraintBottom_toBottomOf="@+id/pendingText"
            app:layout_constraintEnd_toStartOf="@id/pendingText"
            app:layout_constraintTop_toTopOf="@id/pendingText"
            tools:text="USD"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/spacing2x"
            android:layout_marginTop="@dimen/spacing1x"
            android:background="@color/alto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pendingText"
            app:layout_constraintVertical_bias="1"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
